--- a/Latex/bachelorthesis.tex
+++ b/Latex/bachelorthesis.tex
@@ -99,8 +99,7 @@
 This bachelor thesis presents different methods for improving the conformational search ability of Langevin dynamics (LD). All of these methods are based on the Langevin equation, the interaction between particles is approximated by the Lennard-Jones potential. For examples containing polymers, a simple model is used. The force between two connected particles is either mediated by a harmonic potential (Gaussian chain) or a FENE potential. Self guided Langevin dynamics (SGLD) adds an additional guiding force to the Langevin equation which accelerates low frequency motions and slows down high frequency motions. Low frequency motions are important for the conformational search ability. The strength of the guiding force is controlled by the guiding factor. SGLD has its own partition function and to perform measurements in a simulation, the values have to be rescaled. A widely used method for accelerating the conformational searching is parallel tempering, or replica exchange Langevin dynamics (RXLD). Replicas of the target system with higher temperatures are simulated parallel and configurations are periodically exchanged according to an exchange probability based on the Metropolis criterion. In contrast to high temperatures, SGLD causes less perturbation on conformational distribution. Therefore exchanges between different SGLD stages with distinct guiding forces are more likely. The base stage of such a replica exchange self guided Langevin dynamics simulation (RXSGLD) has no guiding force and hence generates the target ensemble. Especially for big systems the improvement due to the RXSGLD can be significant.
 \end{comment}
 
-Computer simulations are often used where closed form analytic solutions are not possible for modelling the system of interest, especially for systems containing many interacting particles (many-body problem). Such problems can only be treated numerically using simulations. Although computers became faster not all chemical and mechanical processes on an atomic level can be taken into account for a simulation. Such a treatment would lead to a significant time-scale and length-scale gap between computational and experimental methods. To overcome this gap, different approaches can be used. One way is to use coarse-grained models to reduce the number of degrees of freedom in comparison with an all-atom approach. For example, a simulation containing a huge amount of molecules can be problematic if not only the interaction between molecules, but also the intra-molecular forces between the atoms are included. By treating the molecules as point-like particles and using an appropriate intermolecular potential (e.g. Lennard-Jones potential) the degrees of freedom are reduced and the system can be handled by classical molecular dynamics (MD) methods. MD simulations date back to the mid 50s, where methods developed by Fermi, Pasta and Ulam are used to simulate elastic collisions between hard spheres~\cite{fermi1955studies}, followed by simulations of liquid argon using the Lennard-Jones potential in 1964 by Rahman~\cite{rahman1964correlations}. Huge improvements on the simulation techniques were made over the last decades so that MD simulations can be applied to study polymer dynamics and are on increasing importance for theoretical chemistry because they allow a detailed insight in the dynamic of chemical processes. MD methods are based on integrating the equation of motion. Widely used algorithms for integrating such differential equations are the Leapfrog or Velocity Verlet method because they are easy to implement, stable and add no significant computational cost to a simple Euler method. For the purpose of this work, an integrator found by Eric Vanden-Eijnden and Giovanni Ciccotti~\cite{EricVanden-Eijnden2006} is used. The integrator can also handle additional stochastic and friction terms.  Additional stochastic and friction terms can help to produce the target ensemble. The Langevin equation provides a way to create a canonical ensemble (NVT - amount of particles (N), volume (V) and temperature (T) are conserved). Constant temperature simulations can easier be compared to experimental data because the temperature of an experiment is easier to control than, for example, the energy. One of the greatest challenges in MD simulations lies in the fact that for complex systems the potential energy surfaces have complicated features such as many local minima or high energy barriers. As a result, accurate sampling of the configuration space becomes a very difficult task. Different methods have been developed to accelerate the sampling. High temperatures are able to overcome energy barriers and can therefore be used to improve the conformational search ability. But with a change in temperature, the ensemble is also changed. This problem can be avoided by using an enhanced simulation method called parallel tempering, or replica exchange Langevin dynamics (RXLD)~\cite{YujiSugita1999}. Replicas of the target system, with higher temperatures, are simulated parallel and the configuration of these replicas (e.g. coordinates) are exchanged periodically between the replicas. To avoid a change in the ensemble, the exchange probability is such that it preserves the detailed balance. This can be achieved by the Metropolis criterion. Another method uses the fact that low frequency motions such as rotations of a polymer are important for conformational searching. By adding a guiding force, which heats up low frequency motions and cools down high frequency motions, without changing the overall temperature, the sampling is increased significantly~\cite{XiongwuWu2003}. But the guiding force also changes the target ensemble. By applying the same idea as in RXLD, but with different strengths of guiding forces, this behaviour can also be avoided. Such a simulation is called replica exchange self guided Langevin dynamics (RXSGLD)~\cite{XiongwuWu2012}. SGLD causes less perturbation on conformational distribution, therefore exchanges between different SGLD stages are more likely than for a RXLD simulation. The purpose of this bachelor thesis is to present the necessary theoretical background for the mentioned methods (chapter \ref{sec:theoretical}) and to introduce several techniques which eventually reduce the computational cost of a simulation (chapter \ref{sec:implementation}). Parallel computing is of particular interest where different replicas have to be computed parallel. OpenMP provides an easy to use API for parallel computing. The implementation of these methods was done from scratch using object-oriented C++. Several checks were performed during the implementation to ensure a simulation produces correct values. These checks are based on statistical properties of the system. Simple model systems are chosen to show the improvements due to the enhanced simulation methods. The examples contain either single particles (Lennard-Jones fluid), like the simulations by Rahman, or polymers, which are represented by the Rouse model. The molecules are connected by springs and the force is either mediated by a harmonic potential (Gaussian chain) or the FENE potential. The latter prevents non-physical chain configurations. These configurations are placed in a double well potential to check the ability to overcome an energy barrier. The main goal of this thesis is to implement the RXSGLD method and show the advantage of this method in terms of enhanced conformational search ability (chapter \ref{sec:result}).
-
+Computer simulations are often used when closed-form analytic solutions are not available for modelling the system of interest, especially for systems containing many interacting particles (many-body problem). Although the computational power of computers is continuously growing, even with the most recent machines it is not possible to take into account all chemical and mechanical processes at the atomic level (for example with so-called {\it ab-initio} methods) for systems larger than few hundreds of atoms, or for times longer than about 1 ns. Such a treatment would limit significantly the accessible time- and length-scale of a simulation. To overcome these gaps, a combination of different approaches can be used. One way to increase the accessible system sizes is to use effective potentials and coarse-grained models to reduce the number of degrees of freedom. For example, a simulation containing a large amount of molecules can be problematic if not only the interaction between molecules, but also the intra-molecular forces between the atoms are included. By treating the molecules as point-like particles and using an appropriate intermolecular potential (e.g. Lennard-Jones potential) the degrees of freedom are reduced and the system can be handled by classical molecular dynamics (MD) methods. MD simulations date back to the mid 50s, when Fermi, Pasta and Ulam first studied the effect on non-linearity in a vibrating string to test the ergodic hypothesis~\cite{fermi1955studies}. This early work was followed, for example, by MD simulations of liquid argon using the Lennard-Jones potential in 1964 by Rahman~\cite{rahman1964correlations}. Nowadays, MD simulations are routinely used to investigate the properties systems in all branches of condensed-matter physics, chemistry, and also biology.  MD simulations are based on the numerical integration of Newton's equation of motion. Widely used algorithms for integrating such differential equations are the Leapfrog or Velocity Verlet methods, because they are easy to implement, stable (symplectic) and add no significant computational cost to a simple Euler method. In its simplest form, MD samples the microcanonical ensemble, where the total energy of the system is conserved. By adding a stochastic and a friction term to Newton's equation of motion (the Langevin equation) one can sample instead the canonical ensemble  at constant amount of particles (N), volume (V) and temperature (T). Constant temperature simulations are often easier to be compared to experimental data because the temperature of an experiment is often  one of the  control parameters, while the total energy is rarely accessible. One of the greatest challenges in MD simulations lies in the fact that for complex systems the potential energy surfaces have complicated features such as many local minima  and high energy barriers. As a result, accurate sampling of the configuration space becomes a very difficult task. Different methods have been developed to accelerate the sampling. High temperatures are able to overcome energy barriers and can therefore be used to improve the conformational search ability. However,  with a change in temperature, the ensemble distribution is also changed. This problem can be avoided by using an enhanced simulation method called parallel tempering, or replica exchange Langevin dynamics (RXLD)~\cite{YujiSugita1999}. Replicas of the target system, with higher temperatures, are simulated in parallel and the configuration of these replicas (for example, the coordinates) are exchanged periodically between the replicas. To preserve the canonical nature of the ensemble, the exchange probability must be such that it preserves the detailed balance. This can be achieved by using, for example, the Metropolis criterion. Another method recently developed uses the fact that low frequency motions are important for conformational searching. By adding a guiding force that heats up low frequency motions and cools down high frequency motions, without changing the overall temperature, the sampling is increased significantly~\cite{XiongwuWu2003}. However, the guiding force also changes the target ensemble. By applying the same idea as in RXLD, but with different strengths of guiding forces, this behaviour can also be avoided. Such a simulation is called replica exchange self guided Langevin dynamics (RXSGLD)~\cite{XiongwuWu2012}. SGLD causes less perturbation on conformational distribution, therefore exchanges between different SGLD stages are more likely than for a RXLD simulation. The purpose of this bachelor thesis is to present the necessary theoretical background for the mentioned methods (chapter \ref{sec:theoretical}) and to introduce several techniques which eventually reduce the computational cost of a simulation (chapter \ref{sec:implementation}). Parallel computing is of particular interest where different replicas have to be computed in parallel. OpenMP provides an easy-to-use API for parallel computing. The implementation of these methods was done from scratch using object-oriented C++. Several checks were performed during the implementation to ensure a simulation produces correct values.  Simple model systems are chosen to show the improvements introduced with the enhanced simulation methods. As test systems, both the Lennard-Jones fluid and coarse-grained models of polymers have been used, in combination with a double-well external potential, which models in a controlled way a free energy landscape with a single barrier.  The combination of RXLD and SGLD turned out to outperform dramatically the RXLD for the polymer case, showing that the redistribution of thermal energy from fast to slow degrees of freedom is a powerful concept when applied to configurational searches.
 \section{Theoretical Background}
 \label{sec:theoretical}
 
@@ -109,39 +108,33 @@ Computer simulations are often used where closed form analytic solutions are not
 The Langevin equation is an equation of motion with additional stochastic and friction terms. The equation for the $i$-th particle is
 
 \begin{equation}
-m_i \ddot{\vec{x}}_i = \vec{F}(\vec{x}_i(t)) - \gamma_i m_i \dot{\vec{x}}_i + \vec{R}_i
+m_i \ddot{\vec{x}}_i = \vec{F}_i - \gamma_i m_i \dot{\vec{x}}_i + \vec{R}_i,
 \label{eq:langevin_equation}
 \end{equation}
-
-where $\vec{F}(\vec{x}_i(t)) = \vec{F}_i$ is the interaction force, $\gamma_i$ is the collision frequency and $\vec{R}_i$ represents a random force which is related to the mass $m_i$, the Temperature $T$ and the collision frequency $\gamma_i$ by
-
+where $\vec{F}_i$ is the  force acting on particle $i$,, $\gamma_i$ is the collision frequency and $\vec{R}_i$ represents a random force which is related to the mass $m_i$, the temperature $T$ and the collision frequency $\gamma_i$ by
 \begin{equation}
 \braket{\vec{R}_i (t) \vec{R}_j (t')} = 2 m_l k_B T \gamma_l \delta_{i,j} \delta (t-t')
 \label{eq:random_force_1}
 \end{equation}
-
 and
-
 \begin{equation}
-\braket{\vec{R}_i (t)} = 0
+\braket{\vec{R}_i (t)} = 0.
 \label{eq:random_force_2}
 \end{equation}
 
 This is equivalent to
-
 \begin{equation}
 \vec{R}_i(t) = \sqrt{2 k_B T \gamma_i m_i} \eta(t)
-\label{eq:random_force_3}
+\label{eq:random_force_3},
 \end{equation}
-
-where $\eta(t) = \dot{W	}(t)$ is a white-noise ($W(t)$ being a Wiener process). Without the friction term and the stochastic force, the Langevin equation is a regular equation of motion and will therefore conserve energy. A simulation will generate a microcanonical ensemble. With the two additional terms, the system gets coupled to a heat bath and the temperature stays, within fluctuations, constant. Such a simulation will generate a canonical ensemble.
+where $\eta(t)$ is a white-noise with unit variance.Without the friction term and the stochastic force, the Langevin equation is a regular Newton equation of motion and will therefore conserve energy. Such a simulation will sample the microcanonical ensemble. With the two additional terms, the system is coupled to a heat bath and the temperature stays, within fluctuations, constant. Such a simulation will sample the canonical ensemble.
 
 \subsection{Self-Guided Langevin Dynamics (SGLD)}
 
 A method for enhancing conformational searching is by using a self-guided Langevin equation~\cite{XiongwuWu2011a}
 
 \begin{equation}
-m_i \ddot{\vec{x}}_i = \vec{F}(\vec{x}_i(t)) - \gamma_i m_i \dot{\vec{x}}_i + \vec{R}_i + \vec{g}_i
+m_i \ddot{\vec{x}}_i = \vec{F}_i - \gamma_i m_i \dot{\vec{x}}_i + \vec{R}_i + \vec{g}_i
 \label{eq:self_guided}
 \end{equation}
 
@@ -273,7 +266,7 @@ For the mass of argon the reduced timeunit corresponds to $2.161 \cdot 10^{-12} 
 \subsubsection{Lennard-Jones Potential}
 \label{subsubsec:lennard-jones-potential}
 
-The Lennard-Jones potential approximates the interaction between neutral atoms or molecules. A common expression is
+The Lennard-Jones potential approximates the interaction potential between two neutral atoms or molecules as 
 
 \begin{equation}
 U = 4 \epsilon \left( \left( \frac{\sigma}{r_{ij}} \right)^{12} - \left( \frac{\sigma}{r_{ij}} \right)^6 \right)
@@ -376,7 +369,7 @@ This property can be used to verify the implementation and check the conformatio
 
 \subsubsection{Parallel Tempering (RXLD)}
 
-Parallel tempering, also known as temperature replica exchange molecular dynamics (RXLD)~\cite{YujiSugita1999}, is an enhanced sampling method. It works by simulating different replicas, each in the canonical ensemble at different temperatures $T_1 < T_2 < ... < T_M$, where $T_1$ is the temperature of the system of interest. Periodically the temperatures are exchanged between the replicas, according to a transition probability. This condition is such that it preserves the statistical ensemble, in particular the detailed balance. This means the probability of exchanging a replica is the same as exchanging it back. This can be satisfied by the usual Metropolis criterion:
+Parallel tempering, also known as temperature replica exchange molecular dynamics (RXLD)~\cite{YujiSugita1999}, is an enhanced sampling method. It works by simulating different replicas, each in the canonical ensemble at different temperatures $T_1 < T_2 < ... < T_M$, where $T_1$ is the temperature of the system of interest. Periodically the temperatures are exchanged between the replicas, according to a transition probability. This condition is such that it preserves the statistical ensemble, in particular the detailed balance. This means that the probability of exchanging a replica is the same as exchanging it back. This can be satisfied by the usual Metropolis criterion:
 
 \begin{equation}
 p \left( \vec{X}_i \rightarrow \vec{X}_j \right) = \min \left( 1, \exp \left( \left( E_p^{(i)} - E_p^{(j)} \right)  \left( \beta^{(i)} - \beta^{(j)} \right)  \right) \right)
@@ -389,7 +382,7 @@ where $\beta^{(i)} = \frac{1}{k_B T_i}$ and $E_p^{(i)}$ is the potential energy 
 p_i = p_i \sqrt{\frac{T_j}{T_i}} \qquad \text{and} \qquad p_j = p_j \sqrt{\frac{T_i}{T_j}}
 \end{equation}
 
-Another method is exchanging coordinates instead of exchanging temperatures
+Another method consists in  exchanging coordinates instead of exchanging temperatures
 
 \begin{equation}
 \vec{X}_i(x_i, p_i, T_i) \xleftrightarrow{exchange} \vec{X}_j(x_j, p_j, T_j) \Rightarrow \vec{X}_i(x_j, p_i, T_i) \enspace \text{and} \enspace \vec{X}_j(x_i, p_j, T_j)
@@ -424,7 +417,7 @@ The exchange probability can then be expressed in the following way~\cite{Xiongw
 \label{eq:rxsgld}
 \end{dmath}
 
-The exchange criterion stays the same (see equation \ref{eq:parallel}) and if $\lambda = 0$ the exchange probability is the same as in equation \ref{eq:parallel}. SGLD causes less pertubation on conformational distribution and therefore the exchange probability is much higher than in a RXLD simulation. From equations \ref{eq:parallel}, \ref{eq:rxsgld} and figure \ref{im:distributions}, it can be seen, that an exchange is only possible if the potential energy distributions overlap. Especially for big systems the exchange probability is much higher for RXSGLD simulations than for RXLD simulations. This can be seen in figure \ref{im:distributions}.
+The exchange criterion stays the same (see equation \ref{eq:parallel}) and if $\lambda = 0$ the exchange probability is the same as in equation \ref{eq:parallel}. SGLD causes less pertubation on conformational distribution and therefore the exchange probability is much higher than in a RXLD simulation. From equations \ref{eq:parallel}, \ref{eq:rxsgld} and figure \ref{im:distributions} it can be seen that an exchange is only possible if the potential energy distributions overlap. Especially for big systems the exchange probability is much higher for RXSGLD simulations than for RXLD simulations. This can be seen in figure \ref{im:distributions}.
 
 \begin{figure} [H]
 \centering
@@ -435,7 +428,7 @@ The exchange criterion stays the same (see equation \ref{eq:parallel}) and if $\
 
 \subsection{Polymers}
 
-A simple way to represent a polymer is by using springs between the particles. This model is called the Rouse model~\cite{Rouse1953}. A schematic representation of this model can be seen in figure \ref{im:rouse_model}.
+A simple way to represent a polymer is by using springs between point-like particles. This model is called the Rouse model~\cite{Rouse1953}. A schematic representation of this model can be seen in figure \ref{im:rouse_model}.
 
 \begin{figure}[H]
 \centering
@@ -484,7 +477,7 @@ The force on the $i$-th bond is
 
 In the cases where $i=1$ set $\vec{x}_0 = \vec{x}_1$ and where $i=N$ set $\vec{x}_{N+1} = \vec{x}_N$. 
 
-This model is called Gaussian chain, because every bond length satisfies the distribution~\cite{M.Doi1988}
+This model is called a Gaussian chain, because every bond length satisfies the distribution~\cite{M.Doi1988}
 
 \begin{equation}
 \psi(\vec{x}) = \left( \frac{3}{2 \pi b^2} \right)^{\frac{3}{2}} \exp \left(- \frac{3 \vec{x}^2}{2 b^2} \right)
@@ -500,7 +493,7 @@ For given $m$,$n$ the distribution of the vector $\vec{x}_n - \vec{x}_m = \sum_{
 
 \subsubsection{Normal Coordinates}
 
-Measurements in a molecular dynamics simulation can only be performed when the system is equilibrated. A way to give an estimate of the relaxation time of a polymer can be done by introducing normal coordinates~\cite{Teraok2002}. The equation of motion is
+To provide meaningful results, physical quantities should be sampled only once the system has equilibrated. For a Rouse chain, it is possible to give an analytic estimate of this time by introducing normal coordinates~\cite{Teraok2002}. The equation of motion is
 
 \begin{equation}
 m_i \ddot{\vec{x}}_i = k (\vec{x}_{i+1} - 2 \vec{x}_i + \vec{x}_{i-1}) - \gamma m_i \dot{\vec{x}}_i + \vec{R}_i
@@ -606,7 +599,7 @@ The maximum bond length with the FENE-Potential is $R_0$. Common values for the 
 
 \subsection{Boundary Conditions}
 
-For a simulation of a Lennard-Jones fluid, a huge amount of particles would be necessary to avoid the influence of boundaries. To reduce this problem periodic boundary conditions are often used. A small cube with side-length $L$ is filled with particles for a given density. If a particle leaves the simulation region, the coordinate is updated, such that the particle enters the simulation region on the other side. The particle is wrapped around the simulation region. Such a system simulates an infinite, space-filling fluid. The implementation needs two steps:
+For a simulation of a Lennard-Jones fluid, a  large amount of particles would be necessary to avoid the influence of boundaries. To avoid this problem, periodic boundary conditions are often used. A small cube with side-length $L$ is filled with particles for a given density. If a particle leaves the simulation region, the coordinate is updated, such that the particle enters the simulation region on the other side. The particle is wrapped around the simulation region. Such a system simulates an infinite, space-filling fluid. The implementation needs two steps:
 
 \vspace{12pt}
 
@@ -757,7 +750,7 @@ If a compiler doesn't support OpenMP, the directives will cause errors. To avoid
 \subsubsection{Langevin Dynamics}
 
 
-In order to solve the differential equation one needs to integrate the equation of motion. A second-order integrator for Langevin equations was found by Eric Vanden-Eijnden and Giovanni Ciccotti~\cite{EricVanden-Eijnden2006} and is a generalization of the BBK integrator~\cite{BrungerA.1984}. The algorithm reduces to the velocity-Verlet algorithm when $\gamma_i = 0$. The Integrator found is
+In order to solve the differential equation one needs to integrate the equation of motion. A second-order integrator for Langevin equations was developed by Eric Vanden-Eijnden and Giovanni Ciccotti~\cite{EricVanden-Eijnden2006} and is a generalization of the BBK integrator~\cite{BrungerA.1984}. The algorithm reduces to the velocity-Verlet algorithm when $\gamma_i = 0$. The Integrator found is
 
 \begin{equation}
 \begin{cases}
@@ -786,7 +779,7 @@ Xiangwu Wu and Bernard R. Brooks describe a leap-frog Verlet SGLD simulation alg
 
 \subsection{Initial Configuration}
 
-The initial configuration is chosen such that it is suitable for the specific problem. For a Lennard-Jones fluid the initial positions are such that the particles are equally spaced inside the box. They produce a crystal like grid in the beginning. This avoids problems with particles to be too close in the beginning. The initial velocities are drawn from a Boltzmann distribution based on the temperature of the system. The initial positions for a Gaussian chain follow a Gaussian distribution (equation \ref{eq:distribution2-rouse}), whereas the positions for a polymer with the FENE potential are equally spaced. In both cases the initial velocities are also drawn from a Boltzmann distribution. Another possibility for the initial configuration is by using $.xyz$-files containing the initial positions and/or velocities. For simulations with a double well potential, the initial positions are such, that all particles start in the well placed at 0.
+The initial configuration is chosen such that it is suitable for the specific problem. For a Lennard-Jones fluid the initial positions are such that the particles are equally spaced inside the box. They produce a crystal like grid in the beginning. This avoids problems with particles too close to each other in the beginning. The initial velocities are drawn from a Boltzmann distribution based on the temperature of the system. The initial positions for a Gaussian chain follow a Gaussian distribution (equation \ref{eq:distribution2-rouse}), whereas the positions for a polymer with the FENE potential are equally spaced. In both cases the initial velocities are also drawn from a Boltzmann distribution. Another possibility for the initial configuration is by using $.xyz$-files containing the initial positions and/or velocities. For simulations with a double well potential, the initial positions are such, that all particles start in the well placed at 0.
 
 \subsection{Random numbers}
 
@@ -835,12 +828,12 @@ P V = N T + \frac{1}{3} \Big \langle \sum_{i=1}^N \vec{x}_i \cdot \vec{F}_i \Big
 
 \subsection{Lennard-Jones Fluid}
 
-An important check is to show that the energy is conserved if $\gamma = 0$ within a LD simulation. Figure \ref{im:total_energy} shows the energy conservation for a Lennard-Jones fluid with 512 particles and a density of $\rho^* = 0.6 \enspace \nicefrac{1}{\sigma^3}$. 
+An important check is to show that the energy is conserved if $\gamma = 0$ within a LD simulation. Figure \ref{im:total_energy} shows the energy conservation for a Lennard-Jones fluid with 512 particles and a reduced density of $\rho^* = 0.6$.
 
 \begin{figure} [H]
 \centering
 \scalebox{1.1}{\input{total_energy.tex}}
-\caption{Energy evolution ($\gamma^* = 0$, $N = 512$, $\rho^* = 0.6 \enspace 1/\sigma^3$, $\Delta t^* = 0.001 \enspace \sigma (m/\epsilon)^{1/2}$, $T^* = 1 \enspace \epsilon/k_B$)}
+\caption{Energy evolution ($\gamma^* = 0$, $N = 512$, $\rho^* = 0.6$, $\Delta t^* = 0.001 $, $T^* = 1 $)}
 \label{im:total_energy}
 \end{figure}
 
@@ -925,7 +918,7 @@ eplicas ($N = 10$, $\Delta t^* = 0.005 \enspace \sigma (m/\epsilon)^{1/2}$, $\ga
 
 \subsection{Replica Exchanging Self-Guided Langevin Dynamics}
 
-In some cases, a LD simulation is not capable of sampling the conformational space and gets stuck in a local minima. Such a simulation represents figure \ref{im:comparison_rxld_rxsgld}. A polymer ($N = 16$) is set in a double well potential with parameters $s^* = 0$, $w^* = 2$, $b^* = 120 \enspace \epsilon$. The polymer in the LD simulation is not able to leave the first well. RXLD with 4 replicas ($T_1^* = 1 \enspace \epsilon/k_B$, $T_2^* = 1.1 \enspace \epsilon/k_B$, $T_3^* = 1.21 \enspace \epsilon/k_B$, $T_4^* = 1.33 \enspace \epsilon/k_B$) provides a way out of the well and increases the conformational search ability. A RXSGLD simulation with also 4 replicas ($\lambda_1 = 0$, $\lambda_2 = 0.3$, $\lambda_3 = 0.6$, $\lambda_4 = 1.2$) increases this ability even more. For this system, the sampling is increased significantly. The expected value for $\langle y \rangle$ is $1$ as the double well potential is symmetric and it is equally likely for the polymer to be in either of the wells.
+In some cases, a LD simulation is not capable of sampling the conformational space and gets stuck in a local minima. Such a simulation represents figure \ref{im:comparison_rxld_rxsgld}. A polymer ($N = 16$) is set in a double well potential with parameters $s^* = 0$, $w^* = 2$, $b^* = 120 \enspace \epsilon$. The polymer in the LD simulation is not able to leave the first well within the simulation time. RXLD with 4 replicas ($T_1^* = 1 \enspace \epsilon/k_B$, $T_2^* = 1.1 \enspace \epsilon/k_B$, $T_3^* = 1.21 \enspace \epsilon/k_B$, $T_4^* = 1.33 \enspace \epsilon/k_B$) provides a way out of the well and increases the conformational search ability. A RXSGLD simulation with also 4 replicas ($\lambda_1 = 0$, $\lambda_2 = 0.3$, $\lambda_3 = 0.6$, $\lambda_4 = 1.2$) increases this ability even more. For this system, the sampling is increased significantly. The expected value for $\langle y \rangle$ is $1$ as the double well potential is symmetric and it is equally likely for the polymer to be in either of the wells.
 
 \begin{figure} [H]
 \centering
@@ -936,7 +929,7 @@ In some cases, a LD simulation is not capable of sampling the conformational spa
 
 \section{Conclusions}
 
-This paper shows various checks and measurements which can be performed to verify the correct implementation for different enhanced molecular dynamics simulation methods. A simulation without the stochastic term in the Langevin equation needs to conserve energy and by adding such a term, the values obtained from a Lennard-Jones fluid simulation have to match the analytic expressions from the ideal gas. Simulations containing polymers are verified by comparing average ensemble properties with their analytic expressions for simple model systems. Several techniques are presented which eventually reduce the computational cost. By cutting off the potential and using a neighbor list, the simulation time is reduced significantly. OpenMP provides an easy to use API for parallel computing. Without the need to change the source code a lot, it splits up loops which then can be computed parallel. This property is particularly useful for simulations with replicas. In a replica exchange Langevin dynamics simulation (RXLD) replicas of the target system with higher temperatures are simulated parallel and their configurations are exchanged periodically according to an exchange probability based on the Metropolis criterion. This method makes configurations at high temperatures available for simulations performed at low temperatures. The figures \ref{im:without_tempering} - \ref{im:with_tempering_8} show this behaviour. The conformational searching of a system with a polymer ($N = 10$) in a double well potential is accelerated by increasing the amount of replicas. But high temperatures cause perturbation on the conformational distribution. Especially for big systems, this leads to a reduced exchange probability and therefore a less effective method. Self guided Langevin dynamics (SGLD) is a method which can also increase the conformational search ability. An additional guiding force is added to the Langevin equation which heats up low frequency motions and cools down high frequency motions, without changing the overall temperature. Low frequency motions, like chain rotations of a polymer, are important for conformational searching. For a simple system containing one particle, placed on the energy surface of a double well potential, the amount of energy barrier crossings between the two wells is increased significantly (see figure \ref{im:verlet_boltzmann}). By adding the guiding force, the partition function is changed and therefore all values in the simulation have to be re-weighted. Replica exchange self guided Langevin dynamics (RXSGLD) combines the advantages of RXLD and SGLD. Replicas with different strengths of guiding forces are simulated parallel and also exchanged based on the Metropolis criterion. The base stage of such a simulation contains no guiding force and will therefore correctly produce the target ensemble. An example comparing LD, RXLD and RXSGLD for a system with a polymer ($N = 16$) in a double well potential can be seen in figure \ref{im:comparison_rxld_rxsgld}. Initially placed at the origin, the polymer keeps stuck in the first well during the whole LD simulation. By using a RXLD simulation the sampling is clearly enhanced. For the RXSGLD the improvement is remarkable. Not only is the sampling improved, but the polymer also starts crossing the energy barrier a lot earlier. This shows the enhanced conformational search ability compared to RXLD. 
+This thesis reports on the implementation, testing and application of the Replica exchange self guided Langevin dynamics (RXSGLD) algorithm to the problem of a polymer crossing a high free energy barrier, and shows how dramatic the effect of kinetic energy redistribution across modes can be, when sampling the configuration space. Various checks and measurements were performed to verify the correct implementation for different enhanced molecular dynamics simulation methods. A simulation without the stochastic term in the Langevin equation needs to conserve energy and by adding such a term, the values obtained from a Lennard-Jones fluid simulation have to match the analytic expressions from the ideal gas. Simulations containing polymers were tested by comparing average ensemble properties with their analytic expressions for simple model systems. Several techniques were presented, which eventually reduce the overall computational cost. By cutting off the potential and using a neighbor list, the simulation time is reduced significantly. OpenMP, an easy-to-use API for multi-threaded parallel computing has been used as the main parallelization paradigm. Without the need of major code changes, it splits up loops which then can be computed in parallel. This property is particularly useful for simulations with replicas. In a replica exchange Langevin dynamics simulation (RXLD) replicas of the target system with higher temperatures are simulated in parallel and their configurations are exchanged periodically according to an exchange probability based on the Metropolis criterion. This method makes configurations at high temperatures available for simulations performed at low temperatures. The conformational search in a system composed of a polymer in a double well potential is accelerated by increasing the amount of replicas. However, high temperatures cause perturbation on the conformational distribution. Especially for big systems, this leads to a reduced exchange probability and therefore a less effective method. Self guided Langevin dynamics (SGLD) is a method which can also increase the conformational search ability. An additional guiding force is added to the Langevin equation which heats up low frequency motions and cools down high frequency motions, without changing the overall temperature. Low frequency motions, like chain rotations of a polymer, are important for conformational searching. For a simple system containing one particle, placed in a potential double well, the amount of energy barrier crossings between the two wells is increased significantly. By adding the guiding force, the partition function is changed and therefore all values in the simulation have to be re-weighted. RXSGLD combines instead the advantages of RXLD and SGLD. Replicas with different strengths of guiding forces are simulated parallel and also exchanged based on the Metropolis criterion. The base stage of such a simulation contains no guiding force and will therefore correctly produce the target ensemble. Initially placed at the origin, a polymer is stuck in the first well during the whole simulation when using simple LD. By using a RXLD scheme the sampling is clearly enhanced, as the polymer starts crossing the barrier, but an equiibrium sampling was not attained during the whole simulation.  For the RXSGLD case the improvement is even more remarkable, allowing to reach the equilibrium distribution.
 
 \newpage 
 \bibliography{literaturverzeichnis} 
